Fixed Playlist Sidebar not Showing All Items Correctly #3

--- a/SyndiShanX/user.css
+++ b/SyndiShanX/user.css
@@ -80,9 +80,6 @@ html {
 	position: relative!important;
 	right: 10px!important;
 }
-#spicetify-playlist-list .main-rootlist-rootlistItemLink {
-	min-height: 35px!important;
-}
 .JUa6JJNj7R_Y3i4P8YUX {
 	position: relative!important;
 	top: 10px!important;
